# OverWatch

./: .env.example  .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  NIX_SETUP.md  QUICKSTART.md  README.md  USAGE.md  flake.nix  overwatch  overwatch.py  overwatch.sh  run.py  shell.nix
bot/: README.md  bot.py  bot_stream.py  issue_template.md  test_findings.jsonl.backup.20260216_003817
config/: keywords.yaml  patterns.yaml
docs/: PATTERNS.md
scanner/: CMakeLists.txt  README.md  test_token.cpp  vcpkg.json
scanner/.cache/clangd/index/: base64.cpp.0FAB1C9260736DC3.idx  base64.h.645803625F49E0BA.idx  cli.cpp.957848657D13D8CD.idx  cli.h.F00DF1BF6691704F.idx  github_client.cpp.70E92018A8635509.idx  github_client.h.5E628382DD4D2845.idx  main.cpp.1743289C9836F408.idx  query_bank.cpp.465AF016BB1A589E.idx  query_bank.h.F40C1339ED413AF5.idx  scanner.cpp.13ED7C8F8DC406FC.idx  scanner.h.87E124AC8FC51628.idx  secret_detector.cpp.C12629E1C7CF1808.idx  secret_detector.h.C2DBE7AB4F285A15.idx
scanner/include/: cli.h  github_client.h  output.h  query_bank.h  scanner.h  secret_detector.h
scanner/src/: cli.cpp  github_client.cpp  main.cpp  output.cpp  query_bank.cpp  scanner.cpp  secret_detector.cpp
